--- a/views/crawl.pug
+++ b/views/crawl.pug
@@ -5,7 +5,7 @@ block content
   if lastRunDate
     p="Crawler last ran on "+ lastRunDate.toFormat("d LLLL y T (z)")
   else
-    p="Crawler has not yet run successfully"
+    p="Crawler is running ..."
   ul
     li
       a(href="/crawl") Crawl
