--- a/views/index.pug
+++ b/views/index.pug
@@ -8,10 +8,10 @@ block content
     p="Crawler has not yet run successfully"
   ul
     li
-      a(href="/crawl") Crawl
+      a(href="/articles/crawl") Crawl Articles
     li
-      a(href="/unnoted") Unnoted
+      a(href="/articles/review") Review Articles
     li
-      a(href="/view-articles") View Articles
+      a(href="/articles/view") View Articles
     li
-      a(href="/get-resources") Get Resources
+      a(href="/resources/all") Show Resources
