Use MongoDB instead of lowDB.
- Crawlers now use Date instances instead of the Epoch time.
- The project is now a lot more asynchronous due to the fetches to MongoDB.

--- a/views/update-article.pug
+++ b/views/update-article.pug
@@ -13,4 +13,4 @@ block content
       input(type='hidden', value=''+article.id name='id')
 
     button(type='submit') Add note
-  a(href='/unnoted') << Back to Unnoted
+  a(href='/articles/review') << Back to Review Articles
